<resources>
    <string name="app_name">TP1</string>
    <string name="app_title">Quick Maths</string>
    <string name="msg_singleplayer">Singleplayer</string>
    <string name="msg_multiplayer">Multiplayer</string>
    <string name="msg_settings">Create Profile</string>
    <string name="msg_history">History</string>
    <string name="msg_top5">Top 5</string>
    <string name="msg_login">Log in</string>
    <string name="msg_username">Username</string>
    <string name="msg_pick_img">Pick Image</string>
    <string name="msg_create_profile">Create Profile</string>
    <string name="msg_score">Score: ---</string>
    <string name="msg_level">Level: ---</string>
    <string name="msg_correct">Correct: ---</string>
    <string name="msg_wrong">Wrong: ---</string>
    <string name="msg_time">Time: ---</string>
    <string name="msg_user">User</string>
    <string name="msg_score2">Score</string>
    <string name="msg_time2">Time</string>
    <string name="msg_username_image_empty">Username or Image is null or empty</string>
    <string name="msg_multiplayer_not_implemented">Multiplayer is not implemented</string>
    <string name="msg_username_empty">Username is null or empty</string>
    <string name="msg_username_already_exists">Username already exists</string>
    <string name="msg_image_path_empty">Image path is null or empty</string>
    <string name="msg_game_over">Game Over</string>
    <string name="msg_restart_game">Restart game?</string>
    <string name="msg_restart">Restart</string>
    <string name="msg_level_2">Level</string>
    <string name="msg_correct2">Correct</string>
    <string name="msg_wrong2">Wrong</string>
    <string name="msg_credits">Credits</string>
    <string name="credits">Made By:\nJoão Rocha (2018015014) and Pedro Figueiredo (2018012447)\nP1 Class\n2022\2023\nAMOV - Isec</string>
</resources>