<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:padding="32dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_title"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">
        <Button
            android:id="@+id/btnSingleplayer"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/msg_singleplayer"/>
        <Button
            android:id="@+id/btnMultiplayer"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/msg_multiplayer"/>
        <Button
            android:id="@+id/btnSettings"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/msg_settings"/>
        <Button
            android:id="@+id/btnHistory"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="24sp"
            android:text="@string/msg_history"/>
    </LinearLayout>

</FrameLayout>